force-app/main/default/objects/Project__c/fields/Asana_Project__c.field-meta.xml
<CustomField>
    <fullName>Asana_Project__c</fullName>
    <label>Asana Project</label>
    <type>Url</type>
</CustomField>