force-app/main/default/objects/Project__c/fields/Dev_Org__c.field-meta.xml
<CustomField>
    <fullName>Dev_Org__c</fullName>
    <label>Dev Org</label>
    <length>18</length>
    <type>Text</type>
</CustomField>