force-app/main/default/objects/Project__c/fields/Dev_Password__c.field-meta.xml
<CustomField>
    <fullName>Dev_Password__c</fullName>
    <label>Dev Password</label>
    <length>24</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>