force-app/main/default/objects/Project__c/fields/Dev_Username__c.field-meta.xml
<CustomField>
    <fullName>Dev_Username__c</fullName>
    <label>Dev Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>