force-app/main/default/objects/Project__c/fields/Production_Org__c.field-meta.xml
<CustomField>
    <fullName>Production_Org__c</fullName>
    <label>Production Org</label>
    <length>18</length>
    <type>Text</type>
</CustomField>