force-app/main/default/objects/Project__c/fields/Production_Password__c.field-meta.xml
<CustomField>
    <fullName>Production_Password__c</fullName>
    <label>Production Password</label>
    <length>24</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>