force-app/main/default/objects/Project__c/fields/Production_Username__c.field-meta.xml
<CustomField>
    <fullName>Production_Username__c</fullName>
    <label>Production Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>