force-app/main/default/objects/Project__c/fields/Sharepoint_Folder__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Folder__c</fullName>
    <label>Sharepoint Folder</label>
    <type>Url</type>
</CustomField>