force-app/main/default/objects/Project__c/fields/Slack_Channel__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel__c</fullName>
    <label>Slack Channel</label>
    <type>Url</type>
</CustomField>