force-app/main/default/objects/Project__c/fields/UAT_Org__c.field-meta.xml
<CustomField>
    <fullName>UAT_Org__c</fullName>
    <label>UAT Org</label>
    <length>18</length>
    <type>Text</type>
</CustomField>