force-app/main/default/objects/Project__c/fields/UAT_Password__c.field-meta.xml
<CustomField>
    <fullName>UAT_Password__c</fullName>
    <label>UAT Password</label>
    <length>24</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>