force-app/main/default/objects/Project__c/fields/UAT_Username__c.field-meta.xml
<CustomField>
    <fullName>UAT_Username__c</fullName>
    <label>UAT Username</label>
    <type>TextArea</type>
</CustomField>