force-app/main/default/objects/Project__c/fields/WhatsApp_Group__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Group__c</fullName>
    <label>WhatsApp Group</label>
    <type>Url</type>
</CustomField>