force-app/main/default/objects/Project__c/recordTypes/Managed_Services.recordType-meta.xml
<RecordType>
    <fullName>Managed_Services</fullName>
    <active>true</active>
    <label>Managed Services</label>
</RecordType>