force-app/main/default/objects/Project__c/recordTypes/Time_Material_T_M.recordType-meta.xml
<RecordType>
    <fullName>Time_Material_T_M</fullName>
    <active>false</active>
    <label>Time &amp; Material (T&amp;M)</label>
</RecordType>